--- a/server.yml
+++ b/server.yml
@@ -1,7 +1,7 @@
 messages:
     hi:
         ack: Computing response...
-        action: actions.sayhi
+        action: netcmd_actions.sayhi
         error: Unable to say hi.
         help: Say hi to the server!
 
